--- a/accompany-consullting/package.json
+++ b/accompany-consullting/package.json
@@ -40,6 +40,7 @@
     "hammerjs": "^2.0.8",
     "jspdf": "^2.5.1",
     "ng-chartist": "4.1.0",
+    "ngx-star-rating": "^2.1.0",
     "ngx-toastr": "^14.3.0",
     "pdfmake": "^0.2.7",
     "rxjs": "^6.6.0",
