--- a/accompany-consullting/package.json
+++ b/accompany-consullting/package.json
@@ -39,6 +39,7 @@
     "core-js": "^3.6.4",
     "hammerjs": "^2.0.8",
     "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
     "ng-chartist": "4.1.0",
     "ngx-star-rating": "^2.1.0",
     "ngx-toastr": "^14.3.0",
