--- a/accompany-consullting/package.json
+++ b/accompany-consullting/package.json
@@ -41,6 +41,8 @@
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "ng-chartist": "4.1.0",
+    "ngx-extended-pdf-viewer": "^18.0.0-beta.1",
+    "ngx-pipes": "^3.2.2",
     "ngx-star-rating": "^2.1.0",
     "ngx-toastr": "^14.3.0",
     "pdfmake": "^0.2.7",
